iPhone fixes - disable horizontal scroll, hide 2nd vertical line and contact us form

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ body {
 	overflow-x: hidden;
 }
 
+html, body {
+    max-width: 100vw;  /* Prevents going beyond screen width */
+    overflow-x: hidden;  /* Disables horizontal scrolling */
+}
+
 /* The rotating circle */
 .circle {
 	opacity: 0;
@@ -427,7 +432,7 @@ footer > div:not(.socials) {
 
 @media (width < 500px){
 	.circle-container{
-		transform: scale(0.4);
+		transform: scale(0.5);
 		top: 5%;
 		left: 7%;
 	}
@@ -436,6 +441,17 @@ footer > div:not(.socials) {
 		width: 100%;
 		font-size: 3rem;
 	}
+
+	.hero-title {
+        font-size: 3rem;  /* Adjust large text */
+    }
+    .cards {
+        flex-direction: column; /* Stack cards for better fit */
+    }
+
+	#form {
+        display: none !important;  /* Hides the contact us form */
+    }
 }
 
 @media (width> 815px) {
